# second_robot_code

ROBOTIS-OP3-Demo/ROBOTIS-OP3-Demo/op3_ball_detector/: CMakeLists.txt
ROBOTIS-OP3-Demo/ROBOTIS-OP3-Demo/op3_ball_detector/msg/: kudos_vision_gcm.msg  kudos_vision_op3_local_mode.msg
ROBOTIS-OP3-Demo/ROBOTIS-OP3-Demo/op3_demo/: CMakeLists.txt
ROBOTIS-OP3-Demo/ROBOTIS-OP3-Demo/op3_demo/include/op3_demo/: ball_follower.h  ball_tracker.h  op_demo.h  soccer_demo.h
ROBOTIS-OP3-Demo/ROBOTIS-OP3-Demo/op3_demo/launch/: demo.launch  self_test.launch
ROBOTIS-OP3-Demo/ROBOTIS-OP3-Demo/op3_demo/src/soccer/: ball_follower.cpp  ball_follower_origin.cpp  ball_tracker.cpp  ball_tracker_original.cpp  soccer_demo.cpp
ROBOTIS-OP3-Demo/ROBOTIS-OP3-Demo/op3_demo/src/vision/: face_tracker.cpp
ROBOTIS-OP3/ROBOTIS-OP3/op3_base_module/data/: ini_pose.yaml
ROBOTIS-OP3/ROBOTIS-OP3/op3_manager/: CMakeLists.txt
ROBOTIS-OP3/ROBOTIS-OP3/op3_manager/config/: OP3.robot
ROBOTIS-OP3/ROBOTIS-OP3/op3_manager/launch/: op3_manager.launch
ROBOTIS-OP3/ROBOTIS-OP3/op3_walking_module/config/: param.yaml
ROBOTIS-OP3/ROBOTIS-OP3/op3_walking_module/include/op3_walking_module/: op3_walking_module.h
ROBOTIS-OP3/ROBOTIS-OP3/op3_walking_module/src/: op3_walking_module.cpp
kudos_foot_odom/kudos_foot_odom/: CMakeLists.txt
kudos_foot_odom/kudos_foot_odom/include/: foot_odom_node.h
kudos_foot_odom/kudos_foot_odom/include/kudos_foot_odom/: foot_odom_node.h
kudos_foot_odom/kudos_foot_odom/launch/: foot_odom.launch
kudos_foot_odom/kudos_foot_odom/src/: foot_localization.cpp  foot_odom_node.cpp
